--- a/packages/components/src/components/tabs/_tabs.scss
+++ b/packages/components/src/components/tabs/_tabs.scss
@@ -22,126 +22,131 @@
     @include reset;
     @include type-style('body-short-01');
 
-    position: relative;
+    display: flex;
     width: 100%;
     height: auto;
+    min-height: rem(40px);
     color: $text-01;
-    @include carbon--breakpoint(md) {
-      min-height: rem(40px);
-      background: none;
-    }
   }
 
   .#{$prefix}--tabs--container {
-    @include carbon--breakpoint(md) {
-      min-height: rem(48px);
-    }
+    min-height: rem(48px);
   }
 
-  .#{$prefix}--tabs-trigger {
+  .#{$prefix}--tabs__nav {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: rem(40px);
-    padding: 0 $spacing-09 0 $spacing-05;
-    color: $text-01;
-    background-color: $field-01;
-    border-bottom: 1px solid $ui-04;
-    outline: 2px solid transparent;
-    cursor: pointer;
-    @include carbon--breakpoint(md) {
+    flex-direction: row;
+    width: auto;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: auto hidden;
+    list-style: none;
+    transition: max-height $duration--fast-01 motion(standard, productive);
+
+    // hide scrollbars
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
       display: none;
     }
   }
 
-  .#{$prefix}--tabs-trigger:focus,
-  .#{$prefix}--tabs-trigger:active {
-    @include focus-outline('outline');
+  //-----------------------------
+  // Overflow Nav Buttons
+  //-----------------------------
+  .#{$prefix}--tabs__overflow-indicator--left,
+  .#{$prefix}--tabs__overflow-indicator--right {
+    z-index: 1;
+    flex: 1 0 auto;
+    width: $carbon--spacing-03;
   }
 
-  .#{$prefix}--tabs-trigger svg {
-    position: absolute;
-    right: $spacing-05;
-    transition: transform $duration--fast-01 motion(standard, productive);
-    fill: $ui-05;
+  .#{$prefix}--tabs__overflow-indicator--left {
+    margin-right: -$carbon--spacing-03;
+    background-image: linear-gradient(to left, transparent, $ui-background);
   }
 
-  .#{$prefix}--tabs-trigger--open:focus,
-  .#{$prefix}--tabs-trigger--open:active {
-    @include focus-outline('reset');
-
-    transition: outline $duration--fast-01 motion(standard, productive);
+  .#{$prefix}--tabs__overflow-indicator--right {
+    margin-left: -$carbon--spacing-03;
+    background-image: linear-gradient(to right, transparent, $ui-background);
   }
 
-  .#{$prefix}--tabs-trigger--open {
-    background: $ui-03;
+  .#{$prefix}--tabs--light .#{$prefix}--tabs__overflow-indicator--left {
+    background-image: linear-gradient(to left, transparent, $ui-01);
   }
 
-  .#{$prefix}--tabs-trigger--open svg {
-    @include rotate(-180deg, $duration--fast-01, 50% 45%);
+  .#{$prefix}--tabs--light .#{$prefix}--tabs__overflow-indicator--right {
+    background-image: linear-gradient(to right, transparent, $ui-01);
   }
 
-  // There is only a difference in tab color when in mobile/dropdown view
-  .#{$prefix}--tabs--light.#{$prefix}--tabs-trigger {
-    background-color: $field-02;
+  .#{$prefix}--tabs--container .#{$prefix}--tabs__overflow-indicator--left {
+    background-image: linear-gradient(to left, transparent, $ui-03);
   }
 
-  .#{$prefix}--tabs-trigger-text {
-    padding-top: 2px;
-    overflow: hidden;
-    color: $text-01;
-    font-weight: 400;
-    white-space: nowrap;
-    text-decoration: none;
-    text-overflow: ellipsis;
+  .#{$prefix}--tabs--container .#{$prefix}--tabs__overflow-indicator--right {
+    background-image: linear-gradient(to right, transparent, $ui-03);
   }
 
-  .#{$prefix}--tabs-trigger-text:hover {
-    color: $text-01;
+  // Safari-only media query
+  // won't appear correctly with CSS custom properties
+  // see: code snippet and modal overflow indicators
+  @media not all and (min-resolution: 0.001dpcm) {
+    @supports (-webkit-appearance: none) and (stroke-color: transparent) {
+      .#{$prefix}--tabs__overflow-indicator--left {
+        margin-right: -$carbon--spacing-05;
+        background-image: linear-gradient(
+          to left,
+          rgba($ui-background, 0),
+          $ui-background
+        );
+      }
+
+      .#{$prefix}--tabs__overflow-indicator--right {
+        margin-left: -$carbon--spacing-05;
+        background-image: linear-gradient(
+          to right,
+          rgba($ui-background, 0),
+          $ui-background
+        );
+      }
+
+      .#{$prefix}--tabs--container .#{$prefix}--tabs__overflow-indicator--left {
+        background-image: linear-gradient(to left, rgba($ui-03, 0), $ui-03);
+      }
+      .#{$prefix}--tabs--container
+        .#{$prefix}--tabs__overflow-indicator--right {
+        background-image: linear-gradient(to right, rgba($ui-03, 0), $ui-03);
+      }
+    }
   }
 
-  .#{$prefix}--tabs-trigger-text:focus {
-    outline: none;
-  }
+  .#{$prefix}--tab--overflow-nav-button {
+    @include button-reset;
 
-  .#{$prefix}--tabs__nav {
-    @include box-shadow;
-
-    position: absolute;
-    z-index: z('dropdown');
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-height: 600px;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+    width: $carbon--spacing-08;
 
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    background: $ui-01;
-    transition: max-height $duration--fast-01 motion(standard, productive);
-
-    @include carbon--breakpoint(md) {
-      z-index: auto;
-      flex-direction: row;
-      width: auto;
-      background: none;
-      box-shadow: none;
-      transition: inherit;
+    &:focus {
+      @include focus-outline('outline');
     }
   }
 
-  .#{$prefix}--tabs__nav--hidden {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height $duration--fast-01 motion(standard, productive);
+  .#{$prefix}--tab--overflow-nav-button--hidden {
+    display: none;
+  }
 
-    @include carbon--breakpoint(md) {
-      display: flex;
-      max-width: 100%;
-      max-height: none;
-      overflow-x: auto;
-      transition: inherit;
-    }
+  .#{$prefix}--tabs--container .#{$prefix}--tab--overflow-nav-button {
+    width: $carbon--spacing-09;
+    margin: 0;
+    background-color: $ui-03;
+  }
+
+  .#{$prefix}--tab--overflow-nav-button svg {
+    fill: $icon-01;
   }
 
   //-----------------------------
@@ -151,38 +156,34 @@
     @include reset;
 
     display: flex;
-    width: 100%;
-    height: rem(40px);
     padding: 0;
-    background-color: $ui-01;
     cursor: pointer;
     transition: background-color $duration--fast-01 motion(standard, productive);
+  }
 
-    @include carbon--breakpoint(md) {
-      height: auto;
-      background: transparent;
-
-      + .#{$prefix}--tabs__nav-item {
-        margin-left: rem(1px);
-      }
-    }
+  .#{$prefix}--tabs__nav-item + .#{$prefix}--tabs__nav-item {
+    margin-left: rem(1px);
   }
 
   .#{$prefix}--tabs--container .#{$prefix}--tabs__nav-item {
-    @include carbon--breakpoint(md) {
-      background-color: $ui-03;
+    background-color: $ui-03;
+  }
 
-      + .#{$prefix}--tabs__nav-item {
-        margin-left: 0;
-        // Draws the border without affecting the inner-content
-        box-shadow: -1px 0 0 0 $ui-04;
-      }
+  .#{$prefix}--tabs--container
+    .#{$prefix}--tabs__nav-item
+    + .#{$prefix}--tabs__nav-item {
+    margin-left: 0;
+    // Draws the border without affecting the inner-content
+    box-shadow: rem(-1px) 0 0 0 $ui-04;
+  }
 
-      + .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--selected,
-      &.#{$prefix}--tabs__nav-item--selected + .#{$prefix}--tabs__nav-item {
-        box-shadow: none;
-      }
-    }
+  .#{$prefix}--tabs--container
+    .#{$prefix}--tabs__nav-item
+    + .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--selected,
+  .#{$prefix}--tabs--container
+    .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--selected
+    + .#{$prefix}--tabs__nav-item {
+    box-shadow: none;
   }
 
   .#{$prefix}--tabs__nav-item .#{$prefix}--tabs__nav-link {
@@ -194,30 +195,8 @@
   //-----------------------------
   // Item Hover
   //-----------------------------
-  .#{$prefix}--tabs__nav-item:hover:not(.#{$prefix}--tabs__nav-item--selected) {
-    @include carbon--breakpoint(md) {
-      background: transparent;
-    }
-  }
-
-  .#{$prefix}--tabs__nav-item:hover:not(.#{$prefix}--tabs__nav-item--disabled) {
-    background-color: $hover-ui;
-    box-shadow: 0 -1px 0 $hover-ui;
-
-    @include carbon--breakpoint(md) {
-      background-color: transparent;
-
-      + .#{$prefix}--tabs__nav-item {
-        box-shadow: none;
-      }
-    }
-  }
-
-  .#{$prefix}--tabs--container
-    .#{$prefix}--tabs__nav-item:hover:not(.#{$prefix}--tabs__nav-item--disabled) {
-    @include carbon--breakpoint(md) {
-      background-color: $hover-selected-ui;
-    }
+  .#{$prefix}--tabs--container .#{$prefix}--tabs__nav-item:hover {
+    background-color: $hover-selected-ui;
   }
 
   //---------------------------------------------
@@ -225,6 +204,7 @@
   //---------------------------------------------
   .#{$prefix}--tabs__nav-item--disabled,
   .#{$prefix}--tabs__nav-item--disabled:hover {
+    background-color: transparent;
     outline: none;
     cursor: not-allowed;
   }
@@ -233,138 +213,94 @@
     .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--disabled,
   .#{$prefix}--tabs--container
     .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--disabled:hover {
-    @include carbon--breakpoint(md) {
-      background-color: $disabled-02;
-    }
-  }
-
-  .#{$prefix}--tabs--container
-    .#{$prefix}--tabs__nav-item--disabled
-    .#{$prefix}--tabs__nav-link {
-    @include carbon--breakpoint(md) {
-      color: $disabled-03;
-      border-bottom: none;
-    }
+    background-color: $disabled-02;
   }
 
   //-----------------------------
   // Item Selected
   //-----------------------------
-  .#{$prefix}--tabs__nav-item--selected:not(.#{$prefix}--tabs__nav-item--disabled) {
-    display: none;
-    border: none;
+  .#{$prefix}--tabs__nav-item--selected {
     transition: color $duration--fast-01 motion(standard, productive);
+  }
 
-    @include carbon--breakpoint(md) {
-      display: flex;
-      .#{$prefix}--tabs__nav-link,
-      .#{$prefix}--tabs__nav-link:focus,
-      .#{$prefix}--tabs__nav-link:active {
-        @include type-style('productive-heading-01');
+  .#{$prefix}--tabs__nav-item--selected .#{$prefix}--tabs__nav-link,
+  .#{$prefix}--tabs__nav-item--selected .#{$prefix}--tabs__nav-link:focus,
+  .#{$prefix}--tabs__nav-item--selected .#{$prefix}--tabs__nav-link:active {
+    @include type-style('productive-heading-01');
 
-        color: $text-01;
-        border-bottom: 2px solid $interactive-04;
-      }
+    color: $text-01;
+    border-bottom: 2px solid $interactive-04;
+  }
+
+  .#{$prefix}--tabs--container .#{$prefix}--tabs__nav-item--selected,
+  .#{$prefix}--tabs--container .#{$prefix}--tabs__nav-item--selected:hover {
+    background-color: $ui-01;
+
+    .#{$prefix}--tabs__nav-link:focus,
+    .#{$prefix}--tabs__nav-link:active {
+      box-shadow: none;
     }
   }
 
   .#{$prefix}--tabs--container
-    .#{$prefix}--tabs__nav-item--selected:not(.#{$prefix}--tabs__nav-item--disabled),
-  .#{$prefix}--tabs--container
-    .#{$prefix}--tabs__nav-item--selected:hover:not(.#{$prefix}--tabs__nav-item--disabled) {
-    @include carbon--breakpoint(md) {
-      background-color: $ui-01;
+    .#{$prefix}--tabs__nav-item--selected
+    .#{$prefix}--tabs__nav-link {
+    // height - vertical padding
+    line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
+    // Draws the border without affecting the inner-content
+    box-shadow: inset 0 2px 0 0 $interactive-04;
+  }
 
-      .#{$prefix}--tabs__nav-link {
-        padding: $spacing-03 $spacing-05;
-        // height - vertical padding
-        // Draws the border without affecting the inner-content
-        line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
-        border-bottom: none;
-        box-shadow: inset 0 2px 0 0 $interactive-04;
-      }
-
-      .#{$prefix}--tabs__nav-link:focus,
-      .#{$prefix}--tabs__nav-link:active {
-        box-shadow: none;
-      }
-    }
+  .#{$prefix}--tabs--light.#{$prefix}--tabs--container
+    .#{$prefix}--tabs__nav-item--selected,
+  .#{$prefix}--tabs--light.#{$prefix}--tabs--container
+    .#{$prefix}--tabs__nav-item--selected:hover {
+    background-color: $ui-background;
   }
 
   //-----------------------------
   // Link
   //-----------------------------
-  a.#{$prefix}--tabs__nav-link {
+  .#{$prefix}--tabs__nav-link {
     @include focus-outline('reset');
 
-    display: inline-block;
-    width: calc(100% - 32px);
-    height: rem(40px);
-    margin: 0 $spacing-05;
-    padding: $spacing-04 0;
+    width: rem(160px);
+    padding: $spacing-04 $spacing-05 $spacing-03;
     overflow: hidden;
     color: $text-02;
-    font-weight: 400;
-    line-height: 1rem;
     white-space: nowrap;
     text-decoration: none;
     text-overflow: ellipsis;
-    border-bottom: 1px solid $ui-03;
+    border-bottom: $tab-underline-color;
     transition: border $duration--fast-01 motion(standard, productive),
       outline $duration--fast-01 motion(standard, productive);
 
     &:focus,
     &:active {
       @include focus-outline('outline');
-
-      width: 100%;
-      margin: 0;
-      padding-left: 16px;
-    }
-
-    @include carbon--breakpoint(md) {
-      width: rem(160px);
-      margin: 0;
-      padding: $spacing-04 $spacing-05 $spacing-03;
-      line-height: inherit;
-      border-bottom: $tab-underline-color;
-
-      &:focus,
-      &:active {
-        width: rem(160px);
-        border-bottom: 2px;
-      }
     }
   }
 
-  .#{$prefix}--tabs--container a.#{$prefix}--tabs__nav-link {
-    @include carbon--breakpoint(md) {
-      height: rem(48px);
-      padding: $spacing-03 $spacing-05;
-      // Height - vertical padding
-      line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
-      border-bottom: none;
-    }
+  .#{$prefix}--tabs--container .#{$prefix}--tabs__nav-link {
+    height: rem(48px);
+    padding: $spacing-03 $spacing-05;
+    // height - vertical padding
+    line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
+    border-bottom: 0;
   }
 
   //-----------------------------
   //  Link Hover
   //-----------------------------
-  .#{$prefix}--tabs__nav-item:hover:not(.#{$prefix}--tabs__nav-item--selected):not(.#{$prefix}--tabs__nav-item--disabled)
-    .#{$prefix}--tabs__nav-link {
+  .#{$prefix}--tabs__nav-item:hover .#{$prefix}--tabs__nav-link {
     color: $text-01;
-    @include carbon--breakpoint(md) {
-      color: $text-01;
-      border-bottom: $tab-underline-color-hover;
-    }
+    border-bottom: $tab-underline-color-hover;
   }
 
   .#{$prefix}--tabs--container
-    .#{$prefix}--tabs__nav-item:hover:not(.#{$prefix}--tabs__nav-item--selected):not(.#{$prefix}--tabs__nav-item--disabled)
+    .#{$prefix}--tabs__nav-item
     .#{$prefix}--tabs__nav-link {
-    @include carbon--breakpoint(md) {
-      border-bottom: none;
-    }
+    border-bottom: none;
   }
 
   //-----------------------------
@@ -373,28 +309,47 @@
   .#{$prefix}--tabs__nav-item--disabled .#{$prefix}--tabs__nav-link {
     color: $tab-text-disabled;
     border-bottom: $tab-underline-disabled;
-    pointer-events: none;
   }
 
   .#{$prefix}--tabs__nav-item--disabled:hover .#{$prefix}--tabs__nav-link {
+    color: $tab-text-disabled;
     border-bottom: $tab-underline-disabled;
-    cursor: no-drop;
+    cursor: not-allowed;
+    pointer-events: none;
   }
 
   .#{$prefix}--tabs__nav-item--disabled .#{$prefix}--tabs__nav-link:focus,
-  .#{$prefix}--tabs__nav-item--disabled a.#{$prefix}--tabs__nav-link:active {
+  .#{$prefix}--tabs__nav-item--disabled .#{$prefix}--tabs__nav-link:active {
     border-bottom: $tab-underline-disabled;
     outline: none;
   }
 
-  //-----------------------------
-  //  Link Focus
-  //-----------------------------
-  .#{$prefix}--tabs__nav-item:not(.#{$prefix}--tabs__nav-item--selected):not(.#{$prefix}--tabs__nav-item--disabled):not(.#{$prefix}--tabs__nav-item--selected)
+  .#{$prefix}--tabs--light
+    .#{$prefix}--tabs__nav-item--disabled
+    .#{$prefix}--tabs__nav-link {
+    border-bottom-color: $ui-03;
+  }
+
+  .#{$prefix}--tabs--light
+    .#{$prefix}--tabs__nav-item--disabled:hover
+    .#{$prefix}--tabs__nav-link {
+    border-bottom-color: $ui-03;
+  }
+
+  .#{$prefix}--tabs--light
+    .#{$prefix}--tabs__nav-item--disabled
     .#{$prefix}--tabs__nav-link:focus,
-  .#{$prefix}--tabs__nav-item:not(.#{$prefix}--tabs__nav-item--selected):not(.#{$prefix}--tabs__nav-item--disabled):not(.#{$prefix}--tabs__nav-item--selected)
-    a.#{$prefix}--tabs__nav-link:active {
-    color: $text-02;
+  .#{$prefix}--tabs--light
+    .#{$prefix}--tabs__nav-item--disabled
+    .#{$prefix}--tabs__nav-link:active {
+    border-bottom-color: $ui-03;
+  }
+
+  .#{$prefix}--tabs--container
+    .#{$prefix}--tabs__nav-item--disabled
+    .#{$prefix}--tabs__nav-link {
+    color: $disabled-03;
+    border-bottom: none;
   }
 
   //-----------------------------
@@ -416,13 +371,13 @@
     @include skeleton;
 
     width: rem(75px);
-    height: rem(12px);
   }
 
   .#{$prefix}--tabs.#{$prefix}--skeleton .#{$prefix}--tabs-trigger {
     @include skeleton;
 
-    width: rem(100px);
+    width: rem(75px);
+    margin-right: rem(1px);
   }
 
   .#{$prefix}--tabs.#{$prefix}--skeleton .#{$prefix}--tabs-trigger svg {
